# backend/internal/controller/http/v1/request/train.go
@@ -7,4 +7,5 @@ type TrainJourney struct {
 	ToStationID   string     `json:"toStationId"   example:"8000261"`
 	TrainNumbers  []string   `json:"trainNumbers"  example:"ICE707"`
 	DepartureDate civil.Date `json:"departureDate" example:"2025-09-20"`
+	ViaStationID  *string    `json:"viaStationId"  example:"8596008" extensions:"nullable"`
 }
